--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
@@ -19,7 +20,10 @@
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/method-override": "^0.0.32",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.3"
   }
 }
