--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/method-override": "^0.0.32",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.15.3"
+    "@types/node": "^18.15.3",
+    "@types/nodemailer": "^6.4.7"
   }
 }
